--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyber Sabores</title>
+  <title>Sabores da Terra</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   
@@ -12,7 +12,7 @@
 
 <header role="banner">
   <div id="main-header" class="header-content">
-    <h1 id="logo-title" aria-label="Cyber Sabores - Restaurante Futurista">Sabores da Terra</h1>
+    <h1 id="logo-title" aria-label="Sabores da Terra - Restaurante Futurista">Sabores da Terra</h1>
     <nav id="main-nav" role="navigation" aria-label="Menu principal">
       <ul>
         <li><a href="#home">Home</a></li>
@@ -150,7 +150,7 @@
 
 <footer role="contentinfo">
   <div class="footer-content">
-    <p>&copy;2025 - Cyber Sabores</p>
+    <p>&copy;2025 - Sabores da Terra</p>
     <div class="social-icons">
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
